# mev-cfg

./: .env.example  .gitignore  Cargo.toml  README.md  Trace_0xef39c19ceb07373914204e76019943d57e5c4e99760ec2a337a6e9d38a315fbc.txt  cfg.dot  mev-cfg  mycontract.evm  mytrace.dot
Results/0xef39c19ceb07373914204e76019943d57e5c4e99760ec2a337a6e9d38a315fbc/: Trace_0xef39c19ceb07373914204e76019943d57e5c4e99760ec2a337a6e9d38a315fbc.txt
src/: analyzer.rs  blockchain.rs  config.rs  lib.rs  main.rs
src/cfg_gen/: cfg_graph.rs  dasm.rs  mod.rs  stack_solve.rs  trace.rs
