[package]
name = "evm-cfg"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.11", features = [
    "derive",
    "env",
    "unicode",
    "wrap_help",
] } # this is what foundry uses
petgraph = "0.6.2"
revm = "9.0.0"
lazy_static = "1.4.0"
itertools = "0.13"
fnv = "1.0.7" # fast hashing for < 64 bytes. https://cglab.ca/~abeinges/blah/hash-rs/
open = "5.0.0"
hex = { package = "const-hex", version = "1.6", features = ["hex"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6"
dotenv = "0.15.0"
ethers = { version = "2.0", features = ["ws", "rustls"] }
async-trait = "0.1.68"
tokio = { version = "1.28.2", features = ["full"] }